...
    <string name="got_it">Got it</string>
    <string name="try_again">Try again</string>
    <string name="continue_label">Continue</string>
    <string name="copied_info">%s copied!</string>
    <string name="stop_scanning">Stop scanning</string>
...
    <string name="no_otps">There are no TOTPs</string>
    <string name="authentication_required">Authentication required</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
...
    <string name="common_json_schema_resource_validation_error">There was an error during validation of resource. Enable logs for more details.</string>
    <string name="common_json_schema_secret_validation_error">There was an error during validation of secret. Enable logs for more details.</string>
    <string name="common_maybe_later">Maybe later</string>
    <string name="common_cannot_create_resource_with_current_config">Cannot update a resource with current configuration</string>
    <string name="common_metadata_key_verification_failure">Could not verify metadata keys</string>
...
    <string name="passkey_create_entry_description">Save passkey in Passly</string>

    <string name="dialog_encourage_autofill_header">Log In to your favourite apps in 3 seconds!</string>
    <string name="dialog_autofill_header">Autofill</string>
    <string name="dialog_encourage_autofill_accessibility_description">This option uses Android\'s Accessibility Service to autofill credentials in apps and browsers that do not support Android\'s native autofill. Tap the switch below to review what is accessed and grant your consent.</string>
...
    <string name="dialog_encourage_autofill_accessibility_other">Other</string>
    <string name="dialog_encourage_autofill_accessibility_title">Enable autofill via Accessibility Service</string>
    <string name="dialog_encourage_autofill_go_to_settings">Go to settings</string>
    <string name="dialog_encourage_autofill_service_header">Enable Autofill for most apps</string>
    <string name="dialog_encourage_autofill_service_description">On the Android settings screen, select Passly, turn on the toggle and press OK.
...
    <string name="resource_form_custom_fields_edit_not_supported">Edition of custom fields is currently not supported</string>

    <string name="settings_app_settings">App settings</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_terms_and_licenses">Terms &amp; licenses</string>
...
    <string name="settings_app_settings_biometry_error">Biometry error. %s</string>
    <string name="settings_app_settings_biometry_authentication_error">Biometry authentication error. %s</string>
    <string name="settings_app_settings_expert_settings">Expert settings</string>

    <string name="settings_app_settings_expert_settings_require_auth_on_every_entry">Require auth on every entry</string>
    <string name="settings_app_settings_expert_settings_hide_root">Hide “device is rooted” dialog</string>
    <string name="settings_app_settings_expert_settings_fetch_page_size">API fetch page size</string>
    <string name="settings_page_size_description">Number of resources fetched per API request. Higher values use more memory but reduce the number of network requests.</string>
    <string name="settings_page_size_exceeds_recommended_limit">Exceeds recommended limit. May cause app slowdowns.</string>
    <string name="settings_page_size_restore_default_values">Restore default values</string>

    <string name="settings_autofill_autofill_title">Here you can change autofill methods</string>
...
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_body">You need an existing account to get started. Sign in with your existing account on the desktop browser extension to connect it with the mobile device.</string>
    <string name="welcome_connect_to_existing_account">Connect to an existing account</string>
    <string name="welcome_no_account">I don’t have an account</string>
    <string name="welcome_create_account_dialog_title">How to create an account?</string>
...

    <string name="transfer_details_header">Scan QR codes to transfer your account details</string>
    <string name="transfer_details_scan_button">Scan QR codes</string>
    <string name="transfer_details_camera_access_dialog_title">Camera access required</string>
    <string name="transfer_details_camera_required_dialog_title">Camera required</string>
...
