package net.svaroh.passly.testtags.composetags

object Otp {
    const val SCREEN = "OtpScreen"
}
